# precision-100-operators

./: README.md
app/: pyproject.toml
app/src/: __init__.py
app/src/p100/operator/: __init__.py  bcp_operator.py  cmdline_operator.py  csv_to_parquet_operator.py  duckdb_operator.py  isql_operator.py  isql_spool_operator.py  length-validator-generator.sh  odbc_operator.py  odbc_spool_operator.py  operator_utils.py  psql_import_operator.py  psql_operator.py  psql_spool_operator.py  sh_operator.py  sqlcmd_operator.py
app/src/p100/operator/connect/: native_connect_store_operator.py
app/src/p100/operator/layout/: native_layout_operator.py  native_one_layout_operator.py
app/src/p100/operator/repo/: file_repo_operator.py  git_repo_operator.py
app/src/p100/operator/resources/: config.toml
connect-operators/oracle/: operator.reg
connect-operators/oracle/conf/: .operator.env.sh
connect-operators/postgres/: operator.reg
connect-operators/postgres/conf/: .operator.env.sh
connect-operators/secure-oracle/: on-install.sh  operator.reg
connect-operators/secure-oracle/conf/: .operator.env.sh
operators/length-validator/: install.sh  on-exec.sh  on-init-exec.sh  on-install.sh  operator.reg
operators/length-validator/conf/: .operator.env.sh
operators/loader/: install.sh  on-exec.sh  on-init-exec.sh  on-install.sh  operator.reg
operators/loader/conf/: .operator.env.sh
operators/map-file/: on-exec.sh  on-init-exec.sh  on-install.sh  operator.reg
operators/map-file/conf/: .map-file.env.sh  .operator.env.sh
operators/map-file/sql/: O_TAB_COLUMNS.sql  TRANSFORM_INTERCEPTOR.sql
operators/masking-mapper/: on-exec.sh  on-init-exec.sh  on-install.sh  operator.reg
operators/masking-mapper/conf/: .operator.env.sh
operators/masking-mapper/sql/: setup.sql
operators/p-csv-loader/: on-exec.sh  on-init-exec.sh  on-install.sh  operator.reg
operators/psql/: on-exec.sh  on-init-exec.sh  on-install.sh  operator.reg
operators/smart-loader/: install.sh  on-exec.sh  on-init-exec.sh  on-install.sh  operator.reg
operators/smart-loader/conf/: .operator.env.sh
operators/smart-map-file/: on-exec.sh  on-init-exec.sh  on-install.sh  operator.reg
operators/smart-map-file/conf/: .operator.env.sh
operators/smart-map-file/sql/: O_TAB_COLUMNS.sql  TRANSFORM_INTERCEPTOR.sql
operators/spool/: on-exec.sh  on-init-exec.sh  on-install.sh  operator.reg
operators/spool/conf/: .operator.env.sh  .spool.env.sh
operators/sql-plus/: on-exec.sh  on-init-exec.sh  on-install.sh  operator.reg
operators/t24-parameter-xml-csv/: on-exec.sh  on-init-exec.sh  on-install.sh  operator.reg
repo-operators/file-repo-operator/: operator.reg
repo-operators/git-repo-operator/: operator.reg
(+2 files in other folders)
