[project]
name = "precision-100-operators"
version = "0.1.3"
authors = [
  { name="ennovatenow", email="ennovatenow@evolvus.com" },
]
description = "Default operators for precision 100"
readme = "README.md"
requires-python = ">=3.8"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]

[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where= ["src"]

[tool.setuptools.package-data]
"p100_plugin" = ["*.toml"]

[project.urls]
Homepage = "https://github.com/Evolvus/precision-100-operators"
Issues = "https://github.com/Evolvus/precision-100-operators/issues"

[project.entry-points."p100.operator"]
add_one = "p100_plugin:add_one"
add_two = "p100_plugin:add_two"
sh = "p100_plugin:shell"
shell = "p100_plugin:shell"
psql = "p100_plugin:psql"

[project.entry-points."p100.operator.repo"]
FILE = "p100.operator:execute_file_repo_operator"
GIT = "p100.operator:execute_git_repo_operator"

[project.entry-points."p100.operator.layout"]
NATIVE = "p100.operator:execute_native_layout_operator"